--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "andreiio/blade-remix-icon": "^3.5",
+        "codeat3/blade-devicons": "^1.7",
+        "codeat3/blade-line-awesome-icons": "^1.4",
         "codeat3/blade-mono-icons": "^1.4",
         "codeat3/blade-uiw-icons": "^1.5",
+        "davidhsianturi/blade-bootstrap-icons": "^1.5",
+        "faisal50x/blade-ionicons": "^1.0",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "saade/blade-iconsax": "^1.2"
