--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "codeat3/blade-devicons": "^1.7",
         "codeat3/blade-line-awesome-icons": "^1.4",
         "codeat3/blade-mono-icons": "^1.4",
+        "codeat3/blade-teeny-icons": "^1.10",
         "codeat3/blade-uiw-icons": "^1.5",
         "davidhsianturi/blade-bootstrap-icons": "^1.5",
         "faisal50x/blade-ionicons": "^1.0",
